Fixed navbar alignment. Still need to adjust padding and fix left hamburger menu.

--- a/packages/inkline.io/components/Navbar/style.scss
+++ b/packages/inkline.io/components/Navbar/style.scss
@@ -17,8 +17,10 @@
 
     > .container > .row > .column {
         > .brand {
-            .logo.-light {
-                display: none;
+            .logo {
+                &.-light {
+                    display: none;
+                }
             }
 
             img {
